--- a/app/src/main/res/layout/row_pokemon.xml
+++ b/app/src/main/res/layout/row_pokemon.xml
@@ -11,8 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:minHeight="48dp"
-        android:textSize="18sp"
-        android:textStyle="bold"
+        android:textAppearance="@style/PokemonTextViewHeader"
         android:gravity="center_vertical"
         tools:text="Bulbasaur"
         android:padding="10dp"/>
